--- a/app/dialog.ui
+++ b/app/dialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>639</width>
+    <width>643</width>
     <height>483</height>
    </rect>
   </property>
@@ -124,14 +124,14 @@ p, li { white-space: pre-wrap; }
      <widget class="QPushButton" name="pushButton">
       <property name="geometry">
        <rect>
-        <x>280</x>
-        <y>20</y>
-        <width>75</width>
+        <x>220</x>
+        <y>110</y>
+        <width>191</width>
         <height>23</height>
        </rect>
       </property>
       <property name="text">
-       <string>Abrir archivo</string>
+       <string>Selecciona un directorio de chats</string>
       </property>
       <property name="autoDefault">
        <bool>false</bool>
@@ -140,24 +140,58 @@ p, li { white-space: pre-wrap; }
        <bool>false</bool>
       </property>
      </widget>
-     <widget class="QTextEdit" name="etShowContent">
+     <widget class="QLabel" name="lbl2">
       <property name="geometry">
        <rect>
-        <x>13</x>
-        <y>270</y>
-        <width>611</width>
-        <height>141</height>
+        <x>30</x>
+        <y>170</y>
+        <width>571</width>
+        <height>16</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <family>Microsoft JhengHei UI</family>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
      </widget>
-     <widget class="QWidget" name="widget" native="true">
+     <widget class="QLabel" name="lbl1">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>60</y>
-        <width>120</width>
-        <height>80</height>
+        <x>30</x>
+        <y>200</y>
+        <width>561</width>
+        <height>16</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Microsoft JhengHei UI</family>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>0</y>
+        <width>181</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border-image: url(:/header/Logo_Sali_Azul.png);</string>
+      </property>
+      <property name="text">
+       <string/>
       </property>
      </widget>
     </widget>
@@ -168,7 +202,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>639</width>
+     <width>643</width>
      <height>21</height>
     </rect>
    </property>
@@ -187,7 +221,7 @@ p, li { white-space: pre-wrap; }
   </action>
  </widget>
  <resources>
-  <include location="images/header.qrc"/>
+  <include location="../../Tkinter Course GUI in Python/images/header.qrc"/>
  </resources>
  <connections/>
 </ui>
